--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -28,7 +28,7 @@
             There are <strong id="modalCounter">?</strong> saved options from RetroTxt v3.
             Did you wish to import and use these?
             <p><small>Unfortunately, there is no importing of the font selection.
-                <br>Any custom colors need to be RGB hex values.</small></p>
+                <br>Any custom <span class="msg-color">color</span>s need to be RGB hex values.</small></p>
           </section>
           <footer class="modal-card-foot">
             <button class="button is-primary" id="modalYesImport">Yes, import</button>
@@ -754,7 +754,7 @@
                   <hr>
                   <h2 class="title has-text-dark is-size-6">Browser configured font</h2>
                   <p class="subtitle has-text-dark is-size-7 mb-2">Default monospace font configured in the
-                    browser's customise font settings (<span id="settingsFont"
+                    browser's <span class="msg-customize">customize</span> font settings (<span id="settingsFont"
                       class="is-family-code">chrome://settings/fonts</span>)
                   </p>
                   <div class="control">
@@ -990,7 +990,7 @@
                   <hr>
                   <!-- Mattel -->
                   <h2 class="title has-text-dark is-size-6 mt-4">Mattel Antiquarius</h2>
-                  <p class="subtitle has-text-dark is-size-7 mb-2">An extremely shortlived and poorly conceived
+                  <p class="subtitle has-text-dark is-size-7 mb-2">An extremely short lived and poorly conceived
                     computer based on the Z80 microprocessor</p>
                   <div class="control"> <label class="radio" for="antiquarius">
                       <input type="radio" name="font" id="antiquarius" value="antiquarius"> System font
@@ -1050,7 +1050,7 @@
                   <h2 class="title has-text-dark is-size-6 mt-4">IBM 3270</h2>
                   <p class="subtitle has-text-dark is-size-7 mb-2">A series of display terminals for IBM mainframes,
                     introduced in 1971 (<a href="https://github.com/rbanffy/3270font/blob/master/LICENSE.txt"
-                      class="has-text-link-dark">manditory font license</a>)</p>
+                      class="has-text-link-dark">mandatory font license</a>)</p>
                   <div class="control"> <label class="radio" for="ibm3270">
                       <input type="radio" name="font" id="ibm3270" value="ibm3270"> Regular
                     </label> <label class="radio" for="ibm3270SemiCondensed">
@@ -2672,7 +2672,7 @@
                     </div>
                   </h2>
                 </div>
-                <!-- centre align text -->
+                <!-- center align text -->
                 <hr>
                 <div>
                   <h2 class="title has-text-dark is-size-6 columns">
@@ -2968,7 +2968,7 @@
                   </form>
                 </div>
                 <hr>
-                <!-- custom colour values -->
+                <!-- custom color values -->
                 <div>
                   <h2 class="title has-text-dark is-size-6 columns">
                     <div class="column" id="customColorValues">Custom <span class="msg-color">color</span>
@@ -2989,7 +2989,7 @@
                   </div>
                 </div>
                 <hr>
-                <!-- colour palette -->
+                <!-- color palette -->
                 <h2 class="title has-text-dark is-size-5 columns">
                   <div class="column">ANSI <span class="msg-color">color</span> palette
                     <p class="subtitle has-text-dark is-size-7 has-text-justified mb-0">Unlike modern CSS and HTML
@@ -3286,7 +3286,7 @@
                           </label>
                           <label class="radio">
                             <input type="radio" name="infoheader" value="close">
-                            Minimalise
+                            <span class="msg-minimalize">Minimalize</span>
                           </label>
                           <label class="radio">
                             <input type="radio" name="infoheader" value="off">
