Fixed broken elements.

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -64,7 +64,7 @@
                   <a class="navbar-item" id="hero5" href="">
                     Display
                   </a>
-                  <a class="navbar-item" id="hero6" href=""">
+                  <a class="navbar-item" id="hero6" href="">
                     Settings
                   </a>
                   <a class=" navbar-item" id="hero7" href="">
@@ -138,15 +138,15 @@
             </div>
             <div class="notice" style="display: none;" id="newInstallNotice">
               <div class="notification is-success is-light">
-                <p class="mb-2">Welcome to RetroTxt!</p>
+                <p class="mb-2"><strong>Welcome</strong></p>
                 <p>
-                  To enhance its functionality, you can add new websites and enable <strong>Run
-                    RetroTxt on files hosted on these domains</strong> in the <a id="newInstallSettings">Settings
-                    tab</a>.<br>The <a id="newInstallDisplay">Display tab</a> contains the theming and style options,
-                  while <a id="newInstallFonts">Fonts</a> lets you choose one of many font families.
+                  <a id="newInstallSettings">To enhance functionality</a>, add new websites and enable <em>Run
+                    RetroTxt on files hosted on these domains</em> in the Settings
+                  tab.<br><a id="newInstallDisplay">The Display tab</a> contains the theming and style options.
+                  <br><a id="newInstallFonts">While Fonts lets you choose</a> one of many font families.
                 </p>
                 <p class="mt-2">
-                  Also, the <a id="newInstallSamples">Samples</a> tab offers a small gallery of text art to get you
+                  <a id="newInstallSamples">Also, the Samples tab</a> offers a small gallery of text art to get you
                   started.
                 </p>
               </div>
@@ -3299,7 +3299,7 @@
                     height.
                   </p>
                   <p class="subtitle has-text-weight-bold has-text-dark is-size-7">recommend <span
-                      class="has-text-info">1</span>
+                      class="has-text-info">1</span></p>
                   <div class="field is-horizontal">
                     <div class="field-body">
                       <div class="field">
@@ -3363,7 +3363,7 @@
                       <p class="subtitle has-text-dark is-size-7 mb-0">Toggle the position of the text document
                         from the left-top margin to the <span class="msg-center">center</span> of the display.</p>
                       <p class="subtitle has-text-weight-bold has-text-dark is-size-7 mb-0">recommend <span
-                          class="has-text-success">on</span>
+                          class="has-text-success">on</span></p>
                     </div>
                     <div class="column is-2">
                       <div class="toggleswitch">
@@ -3387,7 +3387,7 @@
                         <span class="has-text-info">Any open tabs will require a reload.</span>
                       </p>
                       <p class="subtitle has-text-weight-bold has-text-dark is-size-7">recommend <span
-                          class="has-text-grey">off</span>
+                          class="has-text-grey">off</span></p>
                       <p class="subtitle has-text-dark is-size-6 has-text-justified">
                         <code>◘</code> <span class="is-size-7">backspace</span><br>
                         <code>○</code> <span class="is-size-7">tab</span><br>
@@ -3476,7 +3476,7 @@
                     <div class="column is-2"></div>
                   </h2>
                   <p class="subtitle has-text-weight-bold has-text-dark is-size-7 mb-2">recommend <span
-                      class="has-text-info">normal</span>
+                      class="has-text-info">normal</span></p>
                   <form name="text-render-form" id="textRenderForm">
                     <div class="control">
                       <label class="radio" for="txtfxnorm">
@@ -3508,7 +3508,7 @@
                       <span class="has-text-info">Any open tabs will require a reload.</span>
                     </p>
                     <p class="subtitle has-text-weight-bold has-text-dark is-size-7">recommend <span
-                        class="has-text-success">on</span>
+                        class="has-text-success">on</span></p>
                   </div>
                   <div class="column is-2">
                     <div class="toggleswitch">
@@ -3527,7 +3527,7 @@
                       to wrap the text.<br>Page wrap is useful for reading <span class="msg-color">color</span>ed text
                       and logs, but the <em>80 column wrap</em> should be off.</p>
                     <p class="subtitle has-text-weight-bold has-text-dark is-size-7">recommend for artwork <span
-                        class="has-text-grey">off</span>
+                        class="has-text-grey">off</span></p>
                   </div>
                   <div class="column is-2">
                     <div class="toggleswitch">
@@ -3546,7 +3546,7 @@
                       The iCE Color mode, or the non-blink mode, replaces the eight blinking <span
                         class="msg-color">color</span>s with eight replacement backgrounds.</p>
                     <p class="subtitle has-text-weight-bold has-text-dark is-size-7">recommend <span
-                        class="has-text-success">on</span>
+                        class="has-text-success">on</span></p>
                   </div>
                   <div class="column is-2">
                     <div class="toggleswitch">
@@ -3568,7 +3568,7 @@
                         historic home computer systems and terminals.
                       </p>
                       <p class="subtitle has-text-weight-bold has-text-dark is-size-7">recommend <span
-                          class="has-text-info">ms-dos</span>
+                          class="has-text-info">ms-dos</span></p>
                     </div>
                     <div class="column is-2"></div>
                   </h2>
@@ -3684,8 +3684,7 @@
                       Xterm is the standard terminal palette for X11 found on Linux, OpenVMS, etc.
                     </p>
                     <p class="subtitle has-text-weight-bold has-text-dark is-size-7">recommend <span
-                        class="has-text-info">ibm
-                        vga</span>
+                        class="has-text-info">ibm vga</span></p>
                   </div>
                   <div class="column is-2"></div>
                 </h2>
@@ -3874,7 +3873,7 @@
                         Runs in the background and applies RetroTxt to text files
                         hosted on these websites.</p>
                       <p class="subtitle has-text-weight-bold has-text-dark is-size-7">recommend <span
-                          class="has-text-success">on</span>
+                          class="has-text-success">on</span></p>
                       <div class="field is-grouped is-grouped-multiline" id="hostTags">
                         <div class="control" style="display: none;" id="templateHost">
                           <div class="tags has-addons">
@@ -3935,7 +3934,7 @@
                       </p>
                       <p class="subtitle has-text-weight-bold has-text-dark mb-0 is-size-7">recommend <span
                           class="has-text-grey">off</span> <span class="has-text-weight-normal">(unless
-                          this feature is wanted)</span>
+                          this feature is wanted)</span></p>
                       <p name="is-allowed" class="has-text-warning-dark has-text-weight-normal mt-2 is-size-7"
                         style="display: none;">
                         This feature is blocked as the extension browser configuration <em>Allow access to file
@@ -3959,7 +3958,7 @@
                       <p class="subtitle has-text-dark is-size-7 has-text-justified mb-0">When styling text RetroTxt
                         injects a text header detailing the document metadata and style controls.</p>
                       <p class="subtitle has-text-weight-bold has-text-dark is-size-7">recommend <span
-                          class="has-text-info">always</span>
+                          class="has-text-info">always</span></p>
                       <form name="infoheader" id="info-form">
                         <div class="control">
                           <label class="radio">
@@ -3989,7 +3988,7 @@
                         when RetroTxt is updated.
                       </p>
                       <p class="subtitle has-text-weight-bold has-text-dark is-size-7">recommend <span
-                          class="has-text-success">on</span>
+                          class="has-text-success">on</span></p>
                     </div>
                     <div class="column is-2">
                       <div class="toggleswitch">
@@ -4013,7 +4012,7 @@
                           Downloads.</span>
                       </p>
                       <p class="subtitle has-text-weight-bold has-text-dark mb-0 is-size-7">recommend <span
-                          class="has-text-grey">off</span>
+                          class="has-text-grey">off</span></p>
                       <p name="is-allowed" class="has-text-warning-dark has-text-weight-normal mt-2 is-size-7"
                         style="display: none;">
                         This feature is blocked as the extension browser configuration <em>Allow access to file
