Updated "Source code and how to use it" link.

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -4053,7 +4053,8 @@
                 <ul>
                   <li><a href="https://github.com/bengarrett/RetroTxt/blob/master/docs/menus.md">Context menu, Transcode
                       this text</a></li>
-                  <li><a href="https://docs.retrotxt.com/source_code">Source code and how to use it</a></li>
+                  <li><a href="https://github.com/bengarrett/RetroTxt/blob/main/docs/source_code.md">Source code and how
+                      to use it</a></li>
                 </ul>
                 <ul class="mt-2">
                   <li><a href="https://github.com/bengarrett/RetroTxt/blob/master/docs/technical.md">Technical
