--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -4124,6 +4124,7 @@
     </main>
   </article>
   <a id="navBottom"></a>
+  <script src="../scripts/sw/helper.js"></script>
   <script src="../scripts/functions.js"></script>
   <script src="../scripts/options.js"></script>
 </body>
