Browser tabs render ANSI. Though all the settings are broken.

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -4124,8 +4124,8 @@
     </main>
   </article>
   <a id="navBottom"></a>
-  <script src="../scripts/sw/helper.js"></script>
-  <script src="../scripts/functions.js"></script>
+  <script src="../scripts/sw/helpers.js"></script>
+  <script src="../scripts/helpers.js"></script>
   <script src="../scripts/options.js"></script>
 </body>
 
