Removed storage and onLoad errors.

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -4105,6 +4105,7 @@
   <a id="navBottom"></a>
   <script src="../scripts/sw/helpers.js"></script>
   <script src="../scripts/helpers.js"></script>
+  <script src="../scripts/encoding.js"></script>
   <script src="../scripts/options.js"></script>
 </body>
 
