--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -4023,30 +4023,28 @@
         </div>
         <!-- Documentation content -->
         <div class="tabcontent container" id="content7">
-          <div class="columns">
-            <div class="column">
-              <div class="box">
-                <h1 class="title has-text-black-ter is-size-3 mt-4">Documentation</h1>
-                <hr>
-                <h2 class="subtitle has-text-black-ter is-size-4">Support</h2>
-                <ul>
+          <div class="column">
+            <div class="box">
+              <h1 class="title has-text-black-ter is-size-3 mt-4">Documentation</h1>
+              <hr>
+              <aside class="menu">
+                <p class="menu-label">Support</p>
+                <ul class="menu-list">
                   <li><a href="https://github.com/bengarrett/RetroTxt#readme">The readme with installation
                       instructions</a>
                   </li>
                   <li><a href="https://github.com/bengarrett/RetroTxt/blob/master/docs/limitations.md">Limitations and
                       known issues</a></li>
-                  <li><a href="https://github.com/bengarrett/RetroTxt/blob/master/docs/SUPPORT.md">FAQ - Common
-                      questions and fixes</a></li>
+                  <li><a href="https://github.com/bengarrett/RetroTxt/blob/master/docs/SUPPORT.md">FAQ, common questions
+                      and fixes</a></li>
                 </ul>
                 <hr>
-                <h2 class="subtitle has-text-black-ter is-size-4">Documentation</h2>
-                <ul>
+                <p class="menu-label">RetroTxt</p>
+                <ul class="menu-list">
                   <li><a href="https://github.com/bengarrett/RetroTxt/blob/master/docs/menus.md">Context menu, Transcode
                       this text</a></li>
                   <li><a href="https://github.com/bengarrett/RetroTxt/blob/main/docs/source_code.md">Source code and how
                       to use it</a></li>
-                </ul>
-                <ul class="mt-2">
                   <li><a href="https://github.com/bengarrett/RetroTxt/blob/master/docs/technical.md">Technical
                       specifications on supported formats</a>
                   </li>
@@ -4054,26 +4052,26 @@
                   </li>
                 </ul>
                 <hr>
-                <h2 class="subtitle has-text-black-ter is-size-4">Dev-ops</h2>
-                <ul>
+                <p class="menu-label">Dev-ops</p>
+                <ul class="menu-list">
                   <li><a href="https://github.com/bengarrett/RetroTxt/blob/master/docs/nginx.md">Configure NGINX to
                       serve ASCII & ASCII art</a></li>
                 </ul>
                 <hr>
-                <h2 class="subtitle has-text-black-ter is-size-4">Policies</h2>
-                <ul>
-                  <li><a href="https://github.com/bengarrett/RetroTxt/blob/master/docs/privacy.md">Privacy policy</a> /
-                    <a href="https://github.com/bengarrett/RetroTxt/blob/master/docs/SECURITY.md">Security policy</a>
+                <p class="menu-label">Policies</p>
+                <ul class="menu-list">
+                  <li><a href="https://github.com/bengarrett/RetroTxt/blob/master/docs/privacy.md">Privacy policy</a> <a
+                      href="https://github.com/bengarrett/RetroTxt/blob/master/docs/SECURITY.md">Security policy</a>
                   </li>
                   <li><a href="https://github.com/bengarrett/RetroTxt/blob/master/docs/CODE_OF_CONDUCT.md">Code of
                       conduct</a></li>
                 </ul>
-                <ul class="mt-2 mb-2">
+                <ul class="menu-list mt-2 mb-2">
                   <li><a href="https://github.com/bengarrett/RetroTxt/blob/master/docs/CONTRIBUTING.md">Contributing
                       documentation or code</a></li>
                   <li><a href="https://choosealicense.com/licenses/lgpl-3.0/">License</a></li>
                 </ul>
-              </div>
+              </aside>
             </div>
           </div>
         </div>
