--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -3907,20 +3907,20 @@
                     <div class="column">
                       Use RetroTxt as a local text file viewer
                       <p class="subtitle has-text-dark is-size-7 has-text-justified mb-0">
-                        A browser can display text files stored on your PC using the <code>file:///</code> scheme.
-                        RetroTxt renders these files allowing you to use this browser as a text file viewer.
+                        The browser can display text files stored on your PC using the <code>file:///</code> scheme.
+                        RetroTxt renders these files allowing you to use the browser as a text file viewer.
                       </p>
                       <p name="is-off" class="is-hidden has-text-warning-dark has-text-weight-normal mt-2 is-size-7">
                         This feature is off as the
                         <span class="has-text-weight-bold">Allow access to file URLs</span>
-                        in the extension details is disabled.<span name="is-details-url"> This requirement can be
-                          changed using the
-                          the URL below.</span>
+                        in the installed extensions details is disabled.<span name="is-details-url"> This requirement
+                          can be changed using the the URL below.</span>
                       </p>
                       <p name="is-on" class="is-hidden has-text-weight-normal mt-2 is-size-7">To turn off is feature,
                         disable the
                         <span class="has-text-weight-bold">Allow access to file URLs</span>
-                        option in the extension details<span name="is-details-url"> using the URL below</span>.
+                        option in the installed extensions details<span name="is-details-url"> using the URL
+                          below</span>.
                       </p>
                       <p class="mt-2 is-size-7 is-hidden"><code id="linkToDetails"></code></p>
                     </div>
@@ -3992,7 +3992,7 @@
                       <p name="is-off" class="is-hidden has-text-warning-dark has-text-weight-normal mt-2 is-size-7">
                         This feature is locked and off as the
                         <span class="has-text-weight-bold">Allow access to file URLs</span>
-                        in the extension details is disabled.
+                        in the installed extension details is disabled.
                       </p>
                     </div>
                     <div class="column is-2">
